Fixes for Dark Mode (part of issue #353)

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -146,12 +146,12 @@
 	--url-toolbar-btn-img-tools-active: url("../img/options_dk_active.svg");
 	--url-toolbar-btn-img-tools-menu-open: url("../img/options_dk_menuopen.svg");
 	--url-toolbar-btn-img-dropdown: url("../img/dropdown_dk.svg");
-	--url-toolbar-btn-img-shct-keys: url("../img/shctkeys.svg");
-	--url-toolbar-btn-img-shct-keys-hover: url("../img/shctkeys_hover.svg");
-	--url-toolbar-btn-img-shct-keys-active: url("../img/shctkeys_hover.svg");
+	--url-toolbar-btn-img-shct-keys: url("../img/shctkeys-dk.svg");
+	--url-toolbar-btn-img-shct-keys-hover: url("../img/shctkeys_hover-dk.svg");
+	--url-toolbar-btn-img-shct-keys-active: url("../img/shctkeys_hover-dk.svg");
 	--url-toolbar-btn-img-help: url("../img/help-dk.svg");
 	--url-toolbar-btn-img-help-hover: url("../img/help-dk.svg");
-	--url-toolbar-btn-img-help-active: url("../img/help_hover.svg");
+	--url-toolbar-btn-img-help-active: url("../img/help.svg");
 	--url-toolbar-btn-img-ok: url("../img/ok_dk.svg");
 	--url-toolbar-btn-img-ok-hover: url("../img/ok_hover_dk.svg");
 	--url-toolbar-btn-img-ok-active: url("../img/ok_active_dk.svg");
@@ -469,6 +469,10 @@ select {
 
 #toolbar > #help:hover {
     background-image: var(--url-toolbar-btn-img-help-hover);
+}
+
+#toolbar > #help:active {
+    background-image: var(--url-toolbar-btn-img-help-active);
 }
 
 #content {
@@ -884,20 +888,22 @@ ul.fancytree-container {
 
 #options-bar > #shortcut-key-select > #show-shortcut-list {
     height: 24px;
-    border: 1px solid var(--color-toolbarbtn-active-bkgd);
+    border: var(--color-details-pane-btn-border);
     border-radius: 3px;
     vertical-align: bottom;
+    background-color: var(--color-details-pane-btn-bkgd);
     background-image: var(--url-toolbar-btn-img-shct-keys);
 }
 
 #options-bar > #shortcut-key-select > #show-shortcut-list:hover {
     border-color: var(--color-toolbarbtn-hover-bkgd);
+    background-color: var(--color-btn-hover-bkgd);
     background-image: var(--url-toolbar-btn-img-shct-keys-hover);
 }
 
 #options-bar > #shortcut-key-select > #show-shortcut-list:active {
     background-image: var(--url-toolbar-btn-img-shct-keys-active);
-    border-color: #858585;
+    background-color: var(--color-btn-active-bkgd);
 }
 
 #options-bar > #options-bar-spacer {
@@ -1168,6 +1174,7 @@ body[data-locale="nl"] #shortcut-list-dlg #shortcut-instrxns {
     order: 1;
     flex: 1 1 auto;
     margin-right: 4px;
+    background-color: transparent;
     font-size: 12px;
 }
 
